# RefactoringKata

./: .travis.yml  CMakeLists.txt  README.md  RefactoringKata.pro  TODO  main.cpp  original.cpp
CI/: before_install.sh  cmake_install.sh  gcc_install.sh  gtest_install.sh
cmake_files/: add_clang_flags.cmake  add_compiler_flags.cmake  add_gcc_flags.cmake
googletest/: CMakeLists.txt
include/: original.h
sources/: main.cpp  original.cpp  original.h
tests/: before_refactoring_tests.cpp
tests/include/: test.h
tests/src/: empty_vector_tests.cpp  runtime_error_tests.cpp  same_vector_tests.cpp  test.cpp
travis/: gtest_install.sh  install_dependencies.sh
txt_files/: todo.txt
